set up basis for blob store