@@ -62,7 +62,9 @@ public final class DatastoreAccessTest {
   private final LocalServiceTestHelper helper =
       new LocalServiceTestHelper(
               new LocalUserServiceTestConfig(), new LocalDatastoreServiceTestConfig())
-          .setEnvAttributes(Map.of("com.google.appengine.api.users.UserService.user_id_key", "101"))
+          .setEnvAttributes(
+              Collections.singletonMap(
+                  "com.google.appengine.api.users.UserService.user_id_key", "101"))
           .setEnvEmail("mudito@example.com")
           .setEnvAuthDomain("gmail.com")
           .setEnvIsLoggedIn(true);
